Add tenant switching & multi-tenant support
